:lipstick: fixed sidebar links spacing

--- a/src/.vuepress/theme/styles/index.styl
+++ b/src/.vuepress/theme/styles/index.styl
@@ -293,7 +293,7 @@ hr
     display none
 
   .sidebar-links
-    margin-top -10px
+    margin-top -5px
     margin-left: -12px
 
     a[href="/modules/"]
